# vcproj2cmake

./: CMakeLists.txt  MAINTAINERS.txt  README.dev.txt  README.txt  RELEASE  install_me_fully_guided.rb
cmake/Modules/: CMakeLists.txt  V2C_PCHSupport.cmake  vcproj2cmake_defs.cmake  vcproj2cmake_func.cmake
cmake/vcproj2cmake/: CMakeLists.txt  dependency_mappings.txt  include_mappings.txt  lib_dirs_dep_mappings.txt  lib_dirs_mappings.txt
samples/: CMakeLists.txt  vcproj2cmake_enabler.cmake
scripts/: CMakeLists.txt  vcproj2cmake.rb  vcproj2cmake_recursive.rb  vcproj2cmake_settings.rb
scripts/lib/vcproj2cmake/: util_file.rb  v2c_core.rb
scripts/v2c_plugins/: CMakeLists.txt
tests/: README.txt  run_all_tests.rb
tests/st/: .gitignore
tests/st/projects_full/files/sources1/: source_a.c
tests/st/projects_full/vcproj_full_1/: vcproj_full_1.vcproj
tests/st/projects_full/vcxproj_full_1/: vcxproj_full_1.vcxproj  vcxproj_full_1.vcxproj.filters
tests/st/vcproj_full_1/: vcproj_full_1.vcproj
tools/download_projects_random/: download_projects_random.rb  download_projects_random_multi.sh
tools/git/hooks/: README.txt  git_hooks_shell_init_leadin  prepare-commit-msg
tools/git/hooks/scriptlets_prepare-commit-msg/: grep_problematic_content.rb  run_vcproj2cmake_tests.rb
tools/git/scripts/: scm_update_scratch_branch.sh
